--- a/Firebase.Auth/nuget/Xamarin.Firebase.iOS.Auth.nuspec
+++ b/Firebase.Auth/nuget/Xamarin.Firebase.iOS.Auth.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Firebase.iOS.Auth</id>
     <title>Firebase APIs Auth iOS Library</title>
-    <version>3.1.0.0</version>
+    <version>3.1.0.1</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,10 +14,10 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosauth_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.3" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.7.0" />
       </group>
     </dependencies>
   </metadata>
@@ -25,6 +25,6 @@
     <file src="output/Firebase.Auth.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.Auth/Firebase.Auth.targets" target="build/Xamarin.Firebase.iOS.Auth.targets"  />
+    <file src="source/Firebase.Auth/Firebase.Auth.targets" target="build/Xamarin.Firebase.iOS.Auth.targets" />
   </files>
 </package>
