--- a/Firebase.Auth/component/component.yaml
+++ b/Firebase.Auth/component/component.yaml
@@ -1,4 +1,4 @@
-version: 3.1.0.0
+version: 3.1.0.1
 name: Firebase Auth for iOS
 id: firebaseiosauth
 publisher: Xamarin Inc.
@@ -6,44 +6,44 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Firebase.Auth
 summary: Firebase Auth allows you to manage your own account system without any backend code. It supports email and password accounts and 3rd party auth mechanisms.
 icons:
-  - ../../icons/firebaseiosauth_128x128.png
-  - ../../icons/firebaseiosauth_512x512.png
+- ../../icons/firebaseiosauth_128x128.png
+- ../../icons/firebaseiosauth_512x512.png
 docs-url: https://firebase.google.com/docs/auth/
 libraries:
-  ios-unified: 
-    - ../output/Firebase.Auth.dll
-    - ../../Firebase.Analytics/output/Firebase.Analytics.dll
-    - ../../Firebase.Core/output/Firebase.Core.dll
-    - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
+  ios-unified:
+  - ../output/Firebase.Auth.dll
+  - ../../Firebase.Analytics/output/Firebase.Analytics.dll
+  - ../../Firebase.Core/output/Firebase.Core.dll
+  - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Firebase.iOS.Auth, Version=3.1.0.0
+  - Xamarin.Firebase.iOS.Auth, Version=3.1.0.1
 samples:
-  - name: "Auth Sample"
-    path: ../samples/AuthSample/AuthSample.sln
-    removeProjects: 
-      - Firebase.Auth
-      - Google.SignIn
-      - Google.Core
-      - Firebase.Analytics
-      - Firebase.Core
-      - Firebase.InstanceID
-    installNuGets:
-      - project: AuthSample
-        packages:
-          - Xamarin.Firebase.iOS.Auth
-          - Xamarin.Google.iOS.SignIn
-          - Xamarin.Google.iOS.Core
-          - Xamarin.Firebase.iOS.Analytics
-          - Xamarin.Firebase.iOS.Core
-          - Xamarin.Firebase.iOS.InstanceID
-    removeNodes:
-      - "//xNS:Import[contains (@Project, 'Firebase.Auth.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.SignIn.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
+- name: Auth Sample
+  path: ../samples/AuthSample/AuthSample.sln
+  removeProjects:
+  - Firebase.Auth
+  - Google.SignIn
+  - Google.Core
+  - Firebase.Analytics
+  - Firebase.Core
+  - Firebase.InstanceID
+  installNuGets:
+  - project: AuthSample
+    packages:
+    - Xamarin.Firebase.iOS.Auth
+    - Xamarin.Google.iOS.SignIn
+    - Xamarin.Google.iOS.Core
+    - Xamarin.Firebase.iOS.Analytics
+    - Xamarin.Firebase.iOS.Core
+    - Xamarin.Firebase.iOS.InstanceID
+  removeNodes:
+  - //xNS:Import[contains (@Project, 'Firebase.Auth.targets')]
+  - //xNS:Import[contains (@Project, 'Google.SignIn.targets')]
+  - //xNS:Import[contains (@Project, 'Google.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
