--- a/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
+++ b/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Firebase.iOS.Core</id>
     <title>Firebase APIs Core iOS Library</title>
-    <version>3.4.6.0</version>
+    <version>3.4.7.0</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,7 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseioscore_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
       </group>
     </dependencies>
   </metadata>
@@ -22,7 +22,7 @@
     <file src="output/Firebase.Core.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.Core/Firebase.Core.targets" target="build/Xamarin.Firebase.iOS.Core.targets"  />
+    <file src="source/Firebase.Core/Firebase.Core.targets" target="build/Xamarin.Firebase.iOS.Core.targets" />
     <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
