--- a/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
+++ b/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Firebase.iOS.Invites</id>
     <title>Firebase APIs Invites iOS Library</title>
-    <version>1.2.3.2</version>
+    <version>1.2.3.3</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,13 +14,13 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosinvites_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.2"/>
-        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
-        <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.2"/>
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
+        <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.3" />
+        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3" />
+        <dependency id="Xamarin.Firebase.iOS.DynamicLinks" version="1.3.2.3" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.3" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.7.0" />
       </group>
     </dependencies>
   </metadata>
@@ -28,7 +28,7 @@
     <file src="output/Firebase.Invites.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.Invites/Firebase.Invites.targets" target="build/Xamarin.Firebase.iOS.Invites.targets"  />
+    <file src="source/Firebase.Invites/Firebase.Invites.targets" target="build/Xamarin.Firebase.iOS.Invites.targets" />
     <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
