--- a/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
+++ b/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.InstanceID</id>
     <title>Google APIs Instance ID iOS Library</title>
-    <version>1.2.1.5</version>
+    <version>1.2.1.6</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,11 +14,11 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosinstanceid_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
+        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.4" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.3" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.7.0" />
       </group>
     </dependencies>
   </metadata>
@@ -26,6 +26,6 @@
     <file src="output/Google.InstanceID.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.InstanceID/Google.InstanceID.targets" target="build/Xamarin.Google.iOS.InstanceID.targets"  />
+    <file src="source/Google.InstanceID/Google.InstanceID.targets" target="build/Xamarin.Google.iOS.InstanceID.targets" />
   </files>
 </package>
