--- a/Google.SignIn/component/component.yaml
+++ b/Google.SignIn/component/component.yaml
@@ -1,4 +1,4 @@
-version: 4.0.1.2
+version: 4.0.1.3
 name: Google Sign-In for iOS
 id: googleiossignin
 publisher: Xamarin Inc.
@@ -6,47 +6,45 @@ publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.SignIn
 summary: Get users into your apps quickly and securely, using a registration system they already use and trust.
 icons:
-  - ../../icons/googleiossignin_128x128.png
-  - ../../icons/googleiossignin_512x512.png
+- ../../icons/googleiossignin_128x128.png
+- ../../icons/googleiossignin_512x512.png
 docs-url: https://developers.google.com/identity/sign-in/ios/api/index
 libraries:
-  ios-unified: 
-    - ../output/Google.SignIn.dll
-    - ../../Google.Core/output/Google.Core.dll
-    - ../../Firebase.Analytics/output/Firebase.Analytics.dll
-    - ../../Firebase.Core/output/Firebase.Core.dll
-    - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
+  ios-unified:
+  - ../output/Google.SignIn.dll
+  - ../../Google.Core/output/Google.Core.dll
+  - ../../Firebase.Analytics/output/Firebase.Analytics.dll
+  - ../../Firebase.Core/output/Firebase.Core.dll
+  - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Google.iOS.SignIn, Version=4.0.1.2
+  - Xamarin.Google.iOS.SignIn, Version=4.0.1.3
 samples:
-  - name: "Sign-In Sample"
-    path:  ../samples/SignInExample/SignInExample.sln
-    removeProjects: 
-      - Google.SignIn
-      - Google.Core
-      - Firebase.Analytics
-      - Firebase.Core
-      - Firebase.InstanceID
-    installNuGets:
-      - project: SignInExample
-        packages:
-          - Xamarin.Google.iOS.Core
-          - Xamarin.Google.iOS.SignIn
-          - Xamarin.Firebase.iOS.Analytics
-          - Xamarin.Firebase.iOS.Core
-          - Xamarin.Firebase.iOS.InstanceID
-    removeNodes:
-      - "//xNS:Import[contains (@Project, 'Google.SignIn.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
+- name: Sign-In Sample
+  path: ../samples/SignInExample/SignInExample.sln
+  removeProjects:
+  - Google.SignIn
+  - Google.Core
+  - Firebase.Analytics
+  - Firebase.Core
+  - Firebase.InstanceID
+  installNuGets:
+  - project: SignInExample
+    packages:
+    - Xamarin.Google.iOS.Core
+    - Xamarin.Google.iOS.SignIn
+    - Xamarin.Firebase.iOS.Analytics
+    - Xamarin.Firebase.iOS.Core
+    - Xamarin.Firebase.iOS.InstanceID
+  removeNodes:
+  - //xNS:Import[contains (@Project, 'Google.SignIn.targets')]
+  - //xNS:Import[contains (@Project, 'Google.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
-
 additional-files:
-  - source: "../External-Dependency-Info"
-    destination: "THIRD-PARTY-NOTICES"
-
+- source: ../External-Dependency-Info
+  destination: THIRD-PARTY-NOTICES
