--- a/Google.SignIn/nuget/Xamarin.Google.iOS.SignIn.nuspec
+++ b/Google.SignIn/nuget/Xamarin.Google.iOS.SignIn.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.SignIn</id>
     <title>Google APIs Sign In iOS Library</title>
-    <version>4.0.1.2</version>
+    <version>4.0.1.3</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,11 +14,11 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiossignin_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
+        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.4" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.3" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.7.0" />
       </group>
     </dependencies>
   </metadata>
@@ -26,6 +26,6 @@
     <file src="output/Google.SignIn.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.SignIn/Google.SignIn.targets" target="build/Xamarin.Google.iOS.SignIn.targets"  />
+    <file src="source/Google.SignIn/Google.SignIn.targets" target="build/Xamarin.Google.iOS.SignIn.targets" />
   </files>
 </package>
