--- a/Google.MobileAds/nuget/Xamarin.Google.iOS.MobileAds.nuspec
+++ b/Google.MobileAds/nuget/Xamarin.Google.iOS.MobileAds.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.MobileAds</id>
     <title>Google APIs Mobile Ads iOS Library</title>
-    <version>7.16.0.0</version>
+    <version>7.17.0.0</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,7 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosmobileads_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
       </group>
     </dependencies>
   </metadata>
@@ -22,6 +22,6 @@
     <file src="output/Google.MobileAds.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.MobileAds/Google.MobileAds.targets" target="build/Xamarin.Google.iOS.MobileAds.targets"  />
+    <file src="source/Google.MobileAds/Google.MobileAds.targets" target="build/Xamarin.Google.iOS.MobileAds.targets" />
   </files>
 </package>
