--- a/Google.Analytics/component/component.yaml
+++ b/Google.Analytics/component/component.yaml
@@ -1,31 +1,31 @@
-version: 3.17.0.1
+version: 3.17.0.2
 name: Google Analytics for iOS
 id: googleiosanalytics
 publisher: Xamarin Inc.
 publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Analytics
-summary: "Collect, configure, and analyze your data to reach the right audience."
+summary: Collect, configure, and analyze your data to reach the right audience.
 icons:
-  - ../../icons/googleiosanalytics_128x128.png
-  - ../../icons/googleiosanalytics_512x512.png
+- ../../icons/googleiosanalytics_128x128.png
+- ../../icons/googleiosanalytics_512x512.png
 docs-url: https://developers.google.com/analytics/
 libraries:
-  ios-unified: 
-    - ../output/Google.Analytics.dll    
+  ios-unified:
+  - ../output/Google.Analytics.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Google.iOS.Analytics, Version=3.17.0.1
+  - Xamarin.Google.iOS.Analytics, Version=3.17.0.2
 samples:
-  - name: "Cute Animals Sample"
-    path:  ../samples/CuteAnimalsiOS/CuteAnimalsiOS.sln
-    removeProjects: 
-      - Google.Analytics
-    installNuGets:
-      - project: CuteAnimalsiOS
-        packages:
-          - Xamarin.Google.iOS.Analytics
-    removeNodes:
-      - "//xNS:Import[contains (@Project, 'Google.Analytics.targets')]"
+- name: Cute Animals Sample
+  path: ../samples/CuteAnimalsiOS/CuteAnimalsiOS.sln
+  removeProjects:
+  - Google.Analytics
+  installNuGets:
+  - project: CuteAnimalsiOS
+    packages:
+    - Xamarin.Google.iOS.Analytics
+  removeNodes:
+  - //xNS:Import[contains (@Project, 'Google.Analytics.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
