--- a/Google.AppIndexing/nuget/Xamarin.Google.iOS.AppIndexing.nuspec
+++ b/Google.AppIndexing/nuget/Xamarin.Google.iOS.AppIndexing.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>Xamarin.Google.iOS.AppIndexing</id>
     <title>Google APIs App Indexing iOS Library</title>
-    <version>2.0.3.3</version>
+    <version>2.0.3.4</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
