--- a/Google.Maps/nuget/Xamarin.Google.iOS.Maps.nuspec
+++ b/Google.Maps/nuget/Xamarin.Google.iOS.Maps.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.Maps</id>
     <title>Google APIs Maps iOS Library</title>
-    <version>2.1.0.1</version>
+    <version>2.1.0.2</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,7 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosmaps_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
       </group>
     </dependencies>
   </metadata>
@@ -22,6 +22,6 @@
     <file src="output/Google.Maps.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.Maps/Google.Maps.targets" target="build/Xamarin.Google.iOS.Maps.targets"  />
+    <file src="source/Google.Maps/Google.Maps.targets" target="build/Xamarin.Google.iOS.Maps.targets" />
   </files>
 </package>
