--- a/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
+++ b/Firebase.CrashReporting/source/Firebase.CrashReporting/Firebase.CrashReporting.targets
@@ -2,14 +2,14 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseCrashReportingAssemblyName>Firebase.CrashReporting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashReportingAssemblyName>
-		<_FirebaseCrashReportingItemsFolder>FCrshR-1.1.4</_FirebaseCrashReportingItemsFolder>
+		<_FirebaseCrashReportingItemsFolder>FCrshR-1.1.5</_FirebaseCrashReportingItemsFolder>
 		<_FirebaseCrashReportingScriptsMasterAfterTargets>_XamarinBuildDownloadMasterTarget</_FirebaseCrashReportingScriptsMasterAfterTargets>
 		<_FirebaseCrashReportingScriptsMasterDependsOnTargets>_FirebaseCrashReportingCreateScriptsDirectory;_FirebaseCrashReportingCopyScripts</_FirebaseCrashReportingScriptsMasterDependsOnTargets>
 		<_FirebaseCrashReportingScriptsFolder>scripts/FirebaseCrashReporting/</_FirebaseCrashReportingScriptsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCrashReportingItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/3802e848f39facac/FirebaseCrash-1.1.4.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/755757bd0dc960c4/FirebaseCrash-1.1.5.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildCopyResources 
@@ -23,7 +23,7 @@
 	<Target Name="_FirebaseCrashReportingItems">
 
 		<PropertyGroup>
-			<_FirebaseCrashReportingSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)\Frameworks\frameworks\</_FirebaseCrashReportingSDKBaseFolder>
+			<_FirebaseCrashReportingSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCrashReportingItemsFolder)\Frameworks\</_FirebaseCrashReportingSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
