--- a/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
+++ b/Firebase.Auth/source/Firebase.Auth/Firebase.Auth.targets
@@ -3,12 +3,12 @@
 
 	<PropertyGroup>
 		<_FirebaseAuthAssemblyName>Firebase.Auth, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAuthAssemblyName>
-		<_FirebaseAuthItemsFolder>FAth-3.1.0</_FirebaseAuthItemsFolder>
+		<_FirebaseAuthItemsFolder>FAth-3.1.1</_FirebaseAuthItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(OutputType)'!='Library'">
 		<XamarinBuildDownload Include="$(_FirebaseAuthItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/f4428240c02cc0f8/FirebaseAuth-3.1.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/556150739f7f91c0/FirebaseAuth-3.1.1.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseAuthItems"/>
@@ -17,7 +17,7 @@
 	<Target Name="_FirebaseAuthItems">
 
 		<PropertyGroup>
-			<_FirebaseAuthSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAuthItemsFolder)\Frameworks\frameworks\</_FirebaseAuthSDKBaseFolder>
+			<_FirebaseAuthSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAuthItemsFolder)\Frameworks\</_FirebaseAuthSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
