--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.targets
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.targets
@@ -3,18 +3,30 @@
 	<PropertyGroup>
 		<_FirebaseCoreAssemblyName>Firebase.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCoreAssemblyName>
 		<_FirebaseCoreItemsFolder>FCr-3.5.2</_FirebaseCoreItemsFolder>
+		<_GoogleSymbolUtilitiesItemsFolder>GSymblU-1.1.2</_GoogleSymbolUtilitiesItemsFolder>
+		<_GoogleInterchangeUtilitiesItemsFolder>GIntrchngU-1.2.2</_GoogleInterchangeUtilitiesItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCoreItemsFolder)">
 			<Url>https://dl.google.com/dl/cpdc/6cef90b86eee4f08/FirebaseCore-3.5.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
+		<XamarinBuildDownload Include="$(_GoogleSymbolUtilitiesItemsFolder)">
+            <Url>https://dl.google.com/dl/cpdc/7ecdffda6fbef4af/GoogleSymbolUtilities-1.1.2.tar.gz</Url>
+            <Kind>Tgz</Kind>
+        </XamarinBuildDownload>
+		<XamarinBuildDownload Include="$(_GoogleInterchangeUtilitiesItemsFolder)">
+            <Url>https://dl.google.com/dl/cpdc/1a7f7ba905b2c029/GoogleInterchangeUtilities-1.2.2.tar.gz</Url>
+            <Kind>Tgz</Kind>
+        </XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseCoreItemsFolder" />
 	</ItemGroup>
 	<Target Name="_FirebaseCoreItemsFolder">
 
 		<PropertyGroup>
 			<_FirebaseCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCoreItemsFolder)\Frameworks\</_FirebaseCoreSDKBaseFolder>
+			<_GoogleSymbolUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSymbolUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleSymbolUtilitiesSDKBaseFolder>
+			<_GoogleInterchangeUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleInterchangeUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleInterchangeUtilitiesSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
@@ -22,6 +34,14 @@
 				<LogicalName>FirebaseCore</LogicalName>
 				<AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleSymbolUtilitiesSDKBaseFolder)GoogleSymbolUtilities.framework\GoogleSymbolUtilities">
+                <LogicalName>GoogleSymbolUtilities</LogicalName>
+                <AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
+            </RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleInterchangeUtilitiesSDKBaseFolder)GoogleInterchangeUtilities.framework\GoogleInterchangeUtilities">
+                <LogicalName>GoogleInterchangeUtilities</LogicalName>
+                <AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
+            </RestoreAssemblyResource>
 		</ItemGroup>
 
 	</Target>
