[firebase][remoteconfig] Updated to version 2.0.1.0

--- a/Firebase.RemoteConfig/source/Firebase.RemoteConfig/Firebase.RemoteConfig.csproj
+++ b/Firebase.RemoteConfig/source/Firebase.RemoteConfig/Firebase.RemoteConfig.csproj
@@ -37,6 +37,7 @@
       <DependentUpon>FirebaseRemoteConfig</DependentUpon>
     </Compile>
     <Compile Include="Extension.cs" />
+    <Compile Include="Loader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
