[Google Maps] Disable sample build to get a build
There is a bug (already fixed in 15.3) in Xamarin.iOS that is causing the
Maps sample to error.  We will enable samples again when the bot is updated
with the fix.

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -85,7 +85,7 @@
 - Name: Google.iOS.Maps
   BuildScript: ./Google.Maps/build.cake
   TriggerPaths: [ Google.Maps ]
-  MacBuildTargets: [ samples, component ]
+  MacBuildTargets: [ libs, component ]
 # - Name: Google.iOS.PlayGames
 #   BuildScript: ./Google.PlayGames/build.cake
 #   TriggerPaths: [ Google.PlayGames ]
